docs: fix README.md inconsistencies from QA review
- Updated project structure (domain/dop, domain/oop)
- Corrected class names with DTO suffixes
- Fixed make commands (removed non-existent ones)
- Removed duplicate sections
- Updated Postman test count (46 tests)
- Verified API endpoints and versions